KSENROLL-14482: replaced inefficient Boolean constructor with Boolean.valueOf(...)
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@74526 0ac02d80-fb3f-11dc-a574-c57244a850eb